web/apps/gallery/static/scss/style.scss
@import "compass/css3/transition";
@import "compass/css3/border-radius";
@import "compass/css3/box-shadow";
@import "colors.scss";
@import "fonts.scss";

$headerHeight: 46px;

body {
    width: 100%;
    padding: 0;
    margin: 0;
    background-color: $background-color;
    // font-family: Walkway;
    font-family: "Helvetica Neue";
    font-weight: 100;
}

header {
    color: white;
    background-color: $background-color;
    background-color: $main-color;
    width: 100%;
    height: $headerHeight;
    position: fixed;
    top: 0px;
    box-shadow: 0 1px 0.4em 0.3em rgba(0, 0, 0, 0.15) /*Less ugly with opacity like this*/;
    z-index: 1024;

    #signIn, #register, #signOut, #userId {
        display: inline-block;
        float: right;
        margin-right: 20px;
        margin-top: 13px;

        // font-family: Arial;
        font-weight: 200;
        &:hover {
            color: orange;
        }
    }

    #signIn {
        margin-right: 10px;
    }

    #logo {
        font-family: Walkway, serif;
        display: inline-block;
        float: left;
        font-size: 2.5em;
        margin-left: 100px;
        margin-top: 1px;
    }

    a {
        color: white;
        text-decoration: none;
    }
}


h1, h2, h3, h4, h5, h6 {
    font-family: Walkway, serif;
}

h1 {
    font-size: 12em;
    text-align: center;
    color: $main-color;
}

h2 {
    font-size: 2.5em;
    font-weight: 100;
    color: $main-color;
}

h3 {
    &#album {
        font-size: 1em;
        font-weight: 100;
        color: #BDC3C7;
        margin-bottom: 0px;
    }
    & + h2 {
        margin-top: -5px;
    }
}

#home {
    width: 800px;
    height: 400px;
    margin: auto;
    margin-top: 150px;

    h1 {
        margin: 0 auto 0 auto;
        font-size: 20em;
        font-weight: 100;
        font-family: Walkway, serif;
    }
    .tt-query, .tt-hint {
        display: block;
        position: relative;
        width: 85%;
        margin: 0 auto 0 auto;
        height: 36px;
        padding-left: 15px;
        padding-right: 0px;
        font-family: Arial;
        font-size: 0.9em;

        background-color: transparent;
    }
    .tt-query {
        margin-top: -40px;
    }
    .tt-hint {
        position: relative;
        background-image: url("../../images/search.jpeg");
        background-repeat: no-repeat;
        background-position: 660px 5px;
        background-size: 25px 25px;
        background-color: #FFFFFF;
        color: $aside-border-color;
    }
    .tt-dropdown-menu {
        list-style: none;
        width: 82%;
        background: rgba(255, 255, 255, 0.5);
        margin: 0 auto 0 auto;
        padding: 2px 0 20px 0;
        border: 1px solid $aside-border-color;
        border-top: 0px;
        max-height: 200px;
        overflow: scroll;

        h2 {
            margin: 0px;
            font-size: 1.5em;
            padding-left: 30px;
            width: 90%;
            margin: 10px 0 10px 20px;
            border-bottom: 1px solid $aside-border-color;
            a {
                text-decoration: none;
                color: inherit;
            }
        }
        .tt-suggestions {
            display: block;
            padding: 0 20px 0 20px;
            margin-left: 20px;
            height: 32px;
            line-height: 32px;
            p {
                margin: 0;
            }
            &.active {
                width: 80%;
                background: $background-color;
            }
            &:hover {
                cursor:pointer;
            }
        }
    }
}

#login {

    margin-top: 8px;
    margin-right: 16px;

    vertical-align: middle;

    &.inline {
        float: right;
    }
    &.inline label {
        display: None;
    }
    &.inline p {
        display: inline;
    }
    #validate {
        //display: none;
    }
}

aside {
    width: 300px;
    height: 100%;
    position: fixed;
    text-align: right;
    border-right: 1px solid $aside-border-color;
    padding-right: 10px;
    padding-top: 50px;

    ul {
        list-style: none;

        &#galleryInfos {
            font-family: Walkway-Expand, serif;
            font-size: 1.1em;
            line-height: 30px;
            color: #34495e;
        }
    }
}

section {
    &#gallery {
        width: 760px;
        margin-left: 385px;
        margin-top: 60px;
        padding-top: 40px;

        .column {
            width: 240px;
            float: left;
            margin-right: 13px;
        }
    }
}


hr {
    width: 550px; 
    margin-bottom: 40px;
}

#registerForm, #creationForm, #uploadForm, #editForm, #galleries {
    margin: auto;
    margin-top: 130px;
    margin-bottom: 170px;
    text-align: center;
    width: 550px;

    h2 {
        padding-bottom: 40px;

        border-style: solid;
        border-color: $main-color; 
        border-width: 0px 0px 1px 0px;
    }
}

.overlay {
    position: relative;
    display: inline-block;
    margin-bottom: 13px;
    overflow: hidden;

    &:before {
        @include transition(0.5s background-color ease);
        content: '';
        display: block;
        position:absolute;
        width:100%;
        height:100%;
        background-color: rgba(44, 62, 80, 0);
    }

    span.vignette-description {
        @include transition(0.3s margin-left ease 0.2s);
        display: block;
        width: 195px;
        position: absolute;
        color: $background-color;
        font-family: Walkway-Expand, serif;
        font-size: 0.9em;
        margin-top: 40px;
        margin-left: 300px;
        word-break: break-word;
    }
    .vignette {
        width: 240px;
        margin-bottom: -3px;
        position: relative;
        z-index: -1;
    }
    .vignette-expand {
        display: none;
        position: absolute;
        right: 10px;
        bottom: 10px;
    }
}
/* ... */

